<resources>
    <string name="database">db_food_en.db</string>
    <string name="app_name">Diet-Supporter</string>
    <string name="label_welcoming_text_header">Welcome</string>
    <string name="button_welcome_page_text">Start</string>
    <string name="label_header_register_text">Type your data</string>
    <string name="label_weight_register_text">Weight</string>
    <string name="edit_weight_register_hint">weight in kg</string>
    <string name="label_height_register_text">Height</string>
    <string name="edit_height_register_hint">height in cm</string>
    <string name="label_age_register_text">Age</string>
    <string name="edit_age_register_hint">age in years</string>
    <string name="button_submit_register_text">Submit</string>
    <string name="label_name_register">Name</string>
    <string name="edit_name_register_hint">you will be called</string>
    <string name="weight_should_be">type like 75.400</string>
    <string name="height_should_be">type like 178</string>
    <string name="age_should_be">type like 98</string>
    <string name="post_register_header">Your daily calories requirement</string>
    <string name="button_post_register_text">Submit diet</string>
    <string name="label_gender_register_text">Gender</string>
    <string name="label_calories_need">Required calories</string>
    <string name="label_calories_done">Calories used</string>
    <string name="label_diet_plan">Diet plan</string>
    <string name="label_diet_difficulty">Diet difficulty</string>
    <string name="label_average_activity">Average physical activity</string>
    <string name="label_to_start_diet">To start your diet complete the form</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="physical_activity">
        <item>Sedentary</item>
        <item>Low</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Heavy</item>
    </string-array>
    <string-array name="today_activity">
        <item>Almost no physical activity</item>
        <item>Little physical activity</item>
        <item>Normal physical activity</item>
        <item>Physical activity with exercising</item>
        <item>Heavy physical activity with heavy lifting</item>
    </string-array>
    <string-array name="diet_difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="physical_activity_hint_sedentary">Almost no physical activity (mostly at home)</string>
    <string name="physical_activity_hint_low">I rarely go for a walk (office worker)</string>
    <string name="physical_activity_hint_light">I mostly go for a walk (active job)</string>
    <string name="physical_activity_hint_medium">I exercise 3–4 times a week (physical job)</string>
    <string name="physical_activity_hint_heavy">I exercise 5–7 times a week (physical job, heavy lifting)</string>
    <string name="tab_diet">DIET</string>
    <string name="tab_food">FOOD</string>
    <string name="tab_personal_food">MY FOOD</string>
    <string name="tab_schedule_food">Schedule</string>
    <string name="search_food_hint">food name</string>
    <string name="search_food_label">search food</string>
    <string name="label_food_added">You ate(click to change grams)</string>
    <string name="label_food_calories_gram">calories per 100 gram</string>
    <string name="label_food_name">Food</string>
    <string name="label_calories">Calories</string>
    <string name="label_protein">Protein</string>
    <string name="label_carbohydrate">Carbohydrate</string>
    <string name="label_fat">Fat</string>
    <string name="label_food_name_abbr">Food</string>
    <string name="label_calories_abbr">Kcal</string>
    <string name="label_protein_abbr">Prot</string>
    <string name="label_carbohydrate_abbr">Carbs</string>
    <string name="label_fat_abbr">Fat</string>
    <string name="button_add_food">Add</string>
    <string name="label_weight_grams">Weight(grams)</string>
    <string name="label_need">Need</string>
    <string name="label_done">Done</string>
    <string name="label_overused">Overused</string>
    <string name="hint_type_food_name">Type food name</string>
    <string name="label_weight">Wgt</string>
    <string name="label_weight_full">Weight</string>
    <string name="toast_user_data_change">Data has been changed, diet plan will be changed tomorrow</string>
    <string name="bar_label_diet_change">Diet difficulty, physical activity</string>
    <string name="bar_label_data_change">Your personal data</string>
    <string name="settings">Settings</string>
    <string name="graphs">Graphs</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_dialog_realy">Are you sure you want to delete food?</string>
    <string name="diet_graph">Diet</string>
    <string name="personal_food_register">Add food</string>
    <string name="image_button_back">Back</string>
    <string name="about">About</string>
    <string name="frontTabFragmentLabel">Diet day</string>
    <string name="userDietChangeFragmentLabel">Diet change</string>
    <string name="userDataChangeFramentLabel">Data change</string>
    <string name="graphWeightFragmentLabel">Weight history</string>
    <string name="graphDietFragmentLabel">Diet history</string>
    <string name="personalFoodFragmentLabel">Personal food</string>
    <string name="foodTabFragment">General food</string>
    <string name="registerFragmentLabel">Register</string>
    <string name="label_your_day">What is your day today</string>
    <string name="button_start_new_day">Start new day</string>
    <string name="toast_text_today_been_created">You already created today, try tomorrow</string>
    <string name="hint_food_register">like 3.49</string>
    <string name="label_custom_calories">Custom calories</string>
    <string name="bar_label_diet_factor_change">Diet Factor</string>
    <string name="button_update">Update</string>
    <string name="updated">Updated</string>
    <string name="label_protein_percent">Protein %</string>
    <string name="label_carbohydrate_percent">Carbohydrate %</string>
    <string name="label_fat_percent">Fat %</string>

    <string name="text_about_header">Welcome to food diary</string>
    <string name="text_about">
        App with 7000 food records as well you can create your own food records.\n\n
        Based on Mifflin-St Jeor equation, your activity and diet complexity.\n\n
        Nowadays, the Mifflin-St Jeor equation is believed to give the most accurate result. \n
        However, you can use your calculated calories. \n\n
        Default macros are 40% carbohydrate, 30% protein and 30% fat. \n
        You can change macros percent at factor page.\n\n
        Study your diet history and change your weight when you are losing or
        gaining weight for better results.\n\n
        After you finish filling in the current day, start a new one with a calendar icon.
    </string>
    <string name="text_about_bottom">It is non-commercial project which based on internet data.</string>
</resources>