<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_register"
        android:tag="layout/fragment_register">

        <TextView
            android:id="@+id/label_header_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:rotation="-5"
            android:text="@string/label_header_register_text"
            android:textColor="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_weight_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="8"
            android:hint="@string/edit_weight_register_hint"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:rotation="-5"
            app:layout_constraintBottom_toTopOf="@+id/edit_height_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name_register" />

        <TextView
            android:id="@+id/label_weight_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:rotation="-5"
            android:text="@string/label_weight_register_text"
            app:layout_constraintBottom_toBottomOf="@+id/edit_weight_register"
            app:layout_constraintEnd_toStartOf="@+id/edit_weight_register" />

        <TextView
            android:id="@+id/label_height_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:rotation="-5"
            android:text="@string/label_height_register_text"
            app:layout_constraintBottom_toBottomOf="@+id/edit_height_register"
            app:layout_constraintEnd_toStartOf="@+id/edit_height_register" />

        <EditText
            android:id="@+id/edit_height_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="6"
            android:hint="@string/edit_height_register_hint"
            android:inputType="number"
            android:maxLength="3"
            android:rotation="-5"
            app:layout_constraintBottom_toTopOf="@+id/edit_age_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_weight_register" />

        <TextView
            android:id="@+id/label_age_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:rotation="-5"
            android:text="@string/label_age_register_text"
            app:layout_constraintBottom_toBottomOf="@+id/edit_age_register"
            app:layout_constraintEnd_toStartOf="@+id/edit_age_register" />

        <EditText
            android:id="@+id/edit_age_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="6"
            android:hint="@string/edit_age_register_hint"
            android:inputType="number"
            android:maxLength="2"
            android:rotation="-5"
            app:layout_constraintBottom_toTopOf="@+id/spinner_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_height_register" />

        <Button
            android:id="@+id/button_submit_register"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:rotation="-5"
            android:text="@string/button_submit_register_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />

        <EditText
            android:id="@+id/edit_name_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="8"
            android:hint="@string/edit_name_register_hint"
            android:inputType="textPersonName"
            android:rotation="-5"
            app:flow_verticalAlign="bottom"
            app:layout_constraintBottom_toTopOf="@+id/edit_weight_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_header_register" />

        <TextView
            android:id="@+id/label_name_register"
            style="@style/TextAppearance.SubTitleCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:rotation="-5"
            android:text="@string/label_name_register"
            app:layout_constraintBottom_toBottomOf="@+id/edit_name_register"
            app:layout_constraintEnd_toStartOf="@+id/edit_name_register"
            app:layout_constraintVertical_chainStyle="spread" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/gender"
            android:rotation="-5"
            android:theme="@style/SpinnerTheme"
            app:layout_constraintBottom_toTopOf="@+id/button_submit_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_age_register" />

        <TextView
            android:id="@+id/label_gender_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:rotation="-5"
            android:text="@string/label_gender_register_text"
            android:theme="@style/SpinnerTheme"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_gender"
            app:layout_constraintEnd_toStartOf="@+id/spinner_gender" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>